[package]
name = "promizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.23"  # Terminal komutlarını işleyecek kitaplık
serde = { version = "1.0.217", features = ["derive"] }  # JSON ve veri yapılarını işleyecek
serde_json = "1.0.134"  # JSON formatında veri ile çalışma
regex = "1.11.1"  # Regex ile endpoint'lerin çözümlemesi
tokio = { version = "1.42.0", features = ["full"] }  # Asenkron işlemler